--- a/index.html
+++ b/index.html
@@ -34,3 +34,16 @@
 </body>
 </html>
 
+<section id="projects">
+    <h2>My Projects</h2>
+    <ul>
+        <li>
+            <strong>Sweet Crumbs Bakery</strong><br>
+            <a href="PASTE-YOUR-BAKERY-LINK-HERE" target="_blank">View Bakery Demo</a>
+        </li>
+        <li>
+            <strong>Favour Fits Fashion</strong><br>
+            <a href="PASTE-YOUR-FASHION-LINK-HERE" target="_blank">View Fashion Store</a>
+        </li>
+    </ul>
+</section>
