--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <ul>
         <li>
             <strong>Sweet Crumbs Bakery</strong><br>
-            <a href="PASTE-YOUR-BAKERY-LINK-HERE" target="_blank">View Bakery Demo</a>
+            <a href="https://ryder419.github.io/Sweetcrumbs/" target="_blank">View Bakery Demo</a>
         </li>
         <li>
             <strong>Favour Fits Fashion</strong><br>
-            <a href="PASTE-YOUR-FASHION-LINK-HERE" target="_blank">View Fashion Store</a>
+            <a href="https://ryder419.github.io/Favourfits/" target="_blank">View Fashion Store</a>
         </li>
     </ul>
 </section>
